--- a/style.css
+++ b/style.css
@@ -2,54 +2,42 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: grey;
 }
-
-body {
-    min-height: 100vh;
-    background-image: url(assets/nice-background.jpg);
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;
-    background-size: 90rem;
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
-h1 {
+.tittle {
+    margin: 20px;
     display: flex;
     justify-content: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 40px;
-    font-weight: 400;
-    border: 3px solid black;
-    border-radius: 10px;
-    margin: 10px;
-    color: red;
+    align-items: center;
+    color: orange;
 }
-p {
-    margin: 10px;
-    font-size: 20px;
-    border: 3px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    color: red;
-    font-weight: bold;
+.container-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
 }
-ul {
-    margin: 10px;
-    padding: 10px;
-    list-style: none;
-    border: 3px solid black;
-    border-radius: 10px;
-    color: gainsboro;
+.container-inf {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 li {
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
+    font-size: 20px;
     font-weight: bold;
-    font-size: 30px;
-    color: gainsboro;
+    list-style: none;
+    margin: 10px;
+    color: orange;
+}
+img {
+    display: flex;
 }
 a {
     text-decoration: none;
-    color: rgb(127, 7, 138);
-    font-weight: bold;
+    color: orangered;
 }
