--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 }
 .tittle {
